@@ -2,6 +2,17 @@ use strict;
 use warnings;
 use Test::More;
 
+BEGIN {
+    eval {
+        require Moose;
+        require MooseX::NonMoose;
+        require namespace::autoclean;
+    };
+    plan skip_all =>
+        "Moose, MooseX::NonMoose and namespace::autoclean required"
+        if $@;
+}
+
 use lib 't/lib';
 use DBSchemaMoose;
 use RunTests;
